Fix ripple effect not covering whole navbar on links

--- a/css/less/theme.less
+++ b/css/less/theme.less
@@ -82,7 +82,7 @@ body {
   background-color:@primary;
   border: none;
   height:80px;
-  padding:5px;
+  padding:0;
   font-weight:200;
   position:absolute;
   width:100%;
@@ -96,12 +96,16 @@ body {
   }
   .wrapper {
     width:100%;
+    height:100%;
     max-width:960px;
     margin:0 auto;
     padding-left:30px;
     @media only screen and (max-width : 1224px) {
       padding-left:0;
       width:100%;
+    }
+    & > div {
+      height:100%;
     }
   }
   .site-title {
@@ -126,10 +130,12 @@ body {
     margin:0;
     padding:0;
     list-style:none;
+    height:100%;
     li {
-      height:100%;
+      height:90%;
       float:left;
       padding:20px;
+      padding-top:25px;
       margin-top:5px;
       color: @nav-font-color;
       opacity:1;
